# clone-all

./: LICENSE  README.md  clone-all.cabal  clone-all.hs  stack.yaml
