name:                clone-all
version:             0.1.0.1
synopsis:            Clone all github repositories from a given user
description:         Clone all github repositories from a given user
homepage:            https://github.com/silky/clone-all
license:             MIT
license-file:        LICENSE
author:              Noon Silk
maintainer:          noonsilk@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable clone-all
  main-is: clone-all.hs
  build-depends:  base >=4.9 && <4.10
                , directory >=1.2 && <1.3
                , process >=1.4 && <1.5 
                , github >=0.15 && <0.16 
                , text >=1.2 && <1.3 
                , vector >=0.11 && <0.12 
                , optparse-applicative >=0.13 && <0.14
